upgrade to sb4